# MultilayerPerceptron-in-Qt-CPP

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cc
chartarea/: chartarea.cpp  chartarea.h
controller/: controller.cc  controller.h
drowarea/: drowarea.cc  drowarea.h
matrix/: matrix.h
network/: network.cc  network.h
normalaizeimage/: normalaizeimage.h
primitive/: primitive.cc  primitive.h
src/: CMakeLists.txt  Makefile
src/chartarea/: chartarea.cpp  chartarea.h
src/controller/: controller.cc  controller.h
src/drowarea/: drowarea.cc  drowarea.h
src/forms/: view.ui
src/matrix/: matrix.cc  matrix.h
src/network/: network.cc  network.h
src/normalaizeimage/: normalaizeimage.cc  normalaizeimage.h
src/primitive/: primitive.cc  primitive.h
src/statecontrol/: statecontrol.cc  statecontrol.h
src/timeceeper/: timeceeper.cpp  timeceeper.h
statecontrol/: statecontrol.cc  statecontrol.h
tablecontroller/: tablecontroller.cpp  tablecontroller.h
timeceeper/: timeceeper.cpp  timeceeper.h
